<resources>
    <string name="app_name">VoiceIT</string>
    <string name="txv_title_temp">Voice Controlled Smart Living Reasoner Service</string>
    <string name="txv_indoor_temp">Indoor temperature:</string>
    <string name="txv_indoor_temp_show">11.11</string>
    <string name="txv_outdoor_temp">Outdoor temperature:</string>
    <string name="txv_outdoor_temp_show">15.15</string>
    <string name="txv_outdoor_light">Lighting:</string>
    <string name="txv_heater">Heating:</string>
    <string name="txv_outdoor_light_show">Off</string>
    <string name="txv_outdoor_light_on">On</string>
</resources>
